--- a/mediathread/templates/courseaffils/course_update_form.html
+++ b/mediathread/templates/courseaffils/course_update_form.html
@@ -4,14 +4,22 @@
 {% block title %}{{block.super}}&mdash; Course Settings{% endblock %}
 
 {% block dashboard_content %}
-    <h2>Course Settings: General</h2>
     {{ form.media }}
     <form action="" method="post">{% csrf_token %}
-        {% bootstrap_field form.title form_group_class='form-group well' %}
-        {% bootstrap_field form.homepage_title form_group_class='form-group well' %}
-        {% bootstrap_field form.publish_to_world form_group_class='form-group well' %}
         <div class="well">
-            <h4>Item &amp; Selection Visibility</h4>
+            <h3>Course Title</h3>
+            {% bootstrap_field form.title form_group_class='form-group' %}
+        </div>
+        <div class="well">
+            <h3>Homepage</h3>
+            {% bootstrap_field form.homepage_title form_group_class='form-group' %}
+        </div>
+        <div class="well">
+            <h3>Composition Visibility</h3>
+            {% bootstrap_field form.publish_to_world form_group_class='form-group' %}
+        </div>
+        <div class="well">
+            <h3>Item &amp; Selection Visibility</h3>
             {% bootstrap_field form.see_eachothers_items %}
             {% bootstrap_field form.see_eachothers_selections %}
             <span class="help-block">
@@ -23,6 +31,7 @@
             </span>
         </div>
         <div class="well">
+            <h3>LTI</h3>
             {% bootstrap_field form.lti_integration %}
             {% if lti_context and lti_context.enable %}
                 <h5>Instructions</h5>
