fix selenium tests for new sandboxes location

--- a/mediathread/templates/main/course_list.html
+++ b/mediathread/templates/main/course_list.html
@@ -53,7 +53,8 @@
                 <a id="future_semesters" href="?semester_view=future">Future</a>
             </li>
             <li class="{% if semester_view == 'sandbox' %}active{% endif %} navbar-right">
-                <a href="?semester_view=sandbox">Sandboxes</a>
+                <a id="sandboxes_link"
+                   href="?semester_view=sandbox">Sandboxes</a>
             </li>
         </ul>
     </div>
