--- a/mediathread/templates/courseaffils/course_update_form.html
+++ b/mediathread/templates/courseaffils/course_update_form.html
@@ -43,7 +43,7 @@
         </div>
         <div class="form-group">
             <button class="btn btn-primary" type="submit">Save</button>
-            <a href="../" class="btn btn-default" role="button">Cancel</a>
+            <a href="." class="btn btn-default" role="button">Cancel</a>
             {% if not has_student_activity %}
                 <button class="btn" type="submit" name="reset" value="true">
                     Reset to default
