--- a/mediathread/templates/courseaffils/course_row.html
+++ b/mediathread/templates/courseaffils/course_row.html
@@ -2,14 +2,16 @@
 
 <tr>
     <td class="course-choice">
+        {% if course.is_course %}
         <a class="choose-course"
-           {% if not course.is_course %}
-           href="{% url 'affil_activate' course.pk %}"
-           {% else %}
            href="?set_course={{course.group.name|urlencode}}{{next_redirect}}"
-           {% endif %}
-        >{% firstof course.title course.coursedirectory_name %}</a>
-        {% if not course.is_course %}(inactive){% endif %}
+        >{{course.title}}</a>
+        {% else %}
+        {{course.coursedirectory_name}}
+        <a href="{% url 'affil_activate' course.pk %}"
+           class="btn btn-default btn-xs">Activate</a>
+        {% endif %}
+
     </td>
     {% if course.info.termyear %}
         <td>{{course.info.termyear}}</td>
