My Courses - Only show filter when there's more than 5 courses
PMT #107323

--- a/mediathread/templates/main/course_list.html
+++ b/mediathread/templates/main/course_list.html
@@ -59,6 +59,7 @@
         </ul>
     </div>
 
+    {% if courses|length > 5 %}
     <form role="search">
         <input class="course-search search-box form-control"
                type="search"
@@ -66,6 +67,7 @@
                autofocus
                placeholder="Filter">
     </form>
+    {% endif %}
 
     {% if semester_view == 'past' %}
         <h2>Past Courses</h2>
