--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -878,10 +878,10 @@ div.button-form form, div.button-form.inline form {
     border-radius: 5px;
     -moz-border-radius: 5px;
     background-color: #b3d3eb;
+    width: 100%;
 }
 
-.loginbox h2
-{
+.loginbox h2 {
     margin: 0 !important;
     padding: 10px 20px !important;
     background: #a7cae6;
@@ -892,21 +892,26 @@ div.button-form form, div.button-form.inline form {
     color: black;
 }
 
-
-.loginbox .content
-{
+.loginbox .content {
     margin: 0;
     padding: 0 25px 0 25px;
     border: 0;
 }
 
-.loginbox .seperator
-{
+.loginbox .seperator {
     margin: 20px 0;
     padding: 0;
     border: 0;
     border-top: 1px dotted #d9e3eb;
     background-color: #d9e3eb;
+}
+
+.loginbox.orange {
+    background-color: #fae4c4;
+}
+
+.loginbox.orange h2 {
+    background-color: #f8d9ac;
 }
 
 #introduction {
