--- a/mediathread/templates/registration/description.html
+++ b/mediathread/templates/registration/description.html
@@ -3,7 +3,12 @@
     <p>Mediathread connects to a variety of image and video collections (such as YouTube, Flickr, library databases, and course libraries), enabling users to lift items out of these collections and into an analysis environment. In Mediathread, items can then be clipped, annotated, organized, and embedded into essays and other written analysis. <a href="http://mediathread.info" target="_blank"><b>Learn More</b></a></p>
     <br />
 
-    <div style="display: inline">
+    <div class="row">
+        <div class="col-md-12 text-center">
+        {% if settings.DEBUG %}
+        {% else %}
         <iframe style="border: 1px solid black" width="560" height="315" src="https://www.youtube.com/embed/NWNxuJ0MK3k" frameborder="0" allowfullscreen></iframe>
+        {% endif %}
+        </div>
     </div>
 </div>
