--- a/mediathread/templates/main/course_activate.html
+++ b/mediathread/templates/main/course_activate.html
@@ -29,12 +29,13 @@
         <input id="id_affil" name="affil" type="hidden" value="{{affil.pk}}">
         {% bootstrap_field form.course_name %}
         <hr />
-        <p class="help-block">All the following fields are optional.</p>
         <div>
             <label>Anticipated date range of Mediathread use in this course.</label>
         </div>
-        {% bootstrap_field form.date_range_start form_group_class='form-group col-xs-6' %}
-        {% bootstrap_field form.date_range_end form_group_class='form-group col-xs-6' %}
+        {% bootstrap_field form.date_range_start form_group_class='form-group col-xs-4' %}
+        {% bootstrap_field form.date_range_end form_group_class='form-group col-xs-4' %}
+        <div class="clearfix"></div>
+
         {% bootstrap_field form.request_consult_or_demo %}
         {% bootstrap_field form.how_will_mediathread_improve_your_class %}
         {% bootstrap_field form.hear_about_mediathread %}
