Add defaults to course settings page - PMT #106653

--- a/mediathread/templates/courseaffils/course_update_form.html
+++ b/mediathread/templates/courseaffils/course_update_form.html
@@ -27,7 +27,8 @@
                 individual items or selections from all collections
                 views. Students can still view an item or selection
                 embedded in a visible composition. Faculty always can
-                view all items and selections.
+                view all items and selections. These are both on by
+                default.
             </span>
         </div>
         <div class="well">
