Roster Text - updates

--- a/mediathread/templates/registration/invitation_accept.html
+++ b/mediathread/templates/registration/invitation_accept.html
@@ -67,7 +67,7 @@
     <p>Log in to <a href="/">Mediathread</a></p>
 {% else %}
     <form method="post" action="." class="register-form">
-        <p>Your instructor has invited you to join {{invite.course.title}}. Please create a username and password for the Mediathread applicaton.</p>
+        <p>Your instructor has invited you to join {{invite.course.title}}. Please create a username and password to use with Mediathread.</p>
         <br />
 
         {% if form.errors|length %}
