Use blue activate button color - PMT #107300

--- a/mediathread/templates/courseaffils/course_row.html
+++ b/mediathread/templates/courseaffils/course_row.html
@@ -9,7 +9,7 @@
         {% else %}
         {{course.coursedirectory_name}}
         <a href="{% url 'affil_activate' course.pk %}"
-           class="btn btn-default btn-xs">Activate</a>
+           class="btn btn-primary btn-xs">Activate</a>
         {% endif %}
 
     </td>
