Highlight new course when activated - PMT #107322

--- a/mediathread/templates/courseaffils/course_row.html
+++ b/mediathread/templates/courseaffils/course_row.html
@@ -1,6 +1,8 @@
 {% load methtags %}
 
-<tr>
+<tr {% if new_course == course.pk %}
+        class="info"
+    {% endif %}>
     <td class="course-choice">
         {% if course.is_course %}
         <a class="choose-course"
