Help: link directly to uservoice

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -120,7 +120,7 @@
                                     <div class="visualclear"></div>
                                     <!-- Settings Menu -->
                                     <div class="settings_submenu" style="display: none">
-                                         <a href="/help/">Knowledge Base</a>
+                                         <a href="http://support.ccnmtl.columbia.edu/knowledgebase/topics/6593-mediathread">Knowledge Base</a>
                                          <a href="/contact/">Contact Us</a>
                                     </div>
                                 {% endblock %}
@@ -154,7 +154,7 @@
                                 </div>
                             </li>
                         {% else %}
-                            <li><div unselectable="on"><a href="/help/">Help</a></div></li>
+                            <li><div unselectable="on"><a href="http://support.ccnmtl.columbia.edu/knowledgebase/topics/6593-mediathread">Help</a></div></li>
                             {% if request.user.is_authenticated %}
                                 <li><a href="/accounts/logout/?next=/">Log Out</a></li>
                             {% else %}
@@ -218,7 +218,7 @@
            <ul id="footernav">
                <li><a href="http://mediathread.info" target="_blank">About</a></li>
                <li><a href="/contact/">Contact Us</a></li>
-               <li><a href="/help/">Help</a></li>
+               <li><a href="http://support.ccnmtl.columbia.edu/knowledgebase/topics/6593-mediathread">Help</a></li>
             </ul>
         </div><!-- id="footer" -->
     {% endblock %}
