--- a/mediathread/templates/dashboard/class_delete_materials.html
+++ b/mediathread/templates/dashboard/class_delete_materials.html
@@ -1,4 +1,5 @@
-{% extends "dashboard/base_dashboard.html" %}
+{% extends 'dashboard/base_course_dashboard.html' %}
+
 {% load assetlinks %}
 {% block title %}Delete Course Materials{% endblock %}
 
@@ -32,8 +33,8 @@
 </script>
 {% endblock %}
 
-{% block dashboard_module %}
-
+{% block dashboard_content %}
+    <h3>Delete Materials</h3>
     <form action="{% url 'course-delete-materials' %}"
      name="course-clear-form" method="POST"
      class="{% if form.errors %}has-error{% endif %}">
